# midi-visu

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml  tests.yml
config/: circle_positions.json
docs/coverage/: index-sort-f.html  index-sort-l.html  index.html
docs/coverage/src/: MidiManager.cpp.func-c.html  MidiManager.cpp.func.html  MidiManager.cpp.gcov.html  MidiManager.h.func-c.html  MidiManager.h.func.html  MidiManager.h.gcov.html  MultiHandleSliderLogic.cpp.func-c.html  MultiHandleSliderLogic.cpp.func.html  MultiHandleSliderLogic.cpp.gcov.html  MultiHandleSliderLogic.h.func-c.html  MultiHandleSliderLogic.h.func.html  MultiHandleSliderLogic.h.gcov.html  OptionsPanelLayout.cpp.func-c.html  OptionsPanelLayout.cpp.func.html  OptionsPanelLayout.cpp.gcov.html  OptionsPanelLayout.h.func-c.html  OptionsPanelLayout.h.func.html  OptionsPanelLayout.h.gcov.html  RangeSliderLogic.cpp.func-c.html  RangeSliderLogic.cpp.func.html  RangeSliderLogic.cpp.gcov.html  StyleTokens.h.func-c.html  StyleTokens.h.func.html  StyleTokens.h.gcov.html  VideoListManager.cpp.func-c.html  VideoListManager.cpp.func.html  VideoListManager.cpp.gcov.html  VideoListManager.h.func-c.html  VideoListManager.h.func.html  VideoListManager.h.gcov.html  VoiceManager.cpp.func-c.html  VoiceManager.cpp.func.html  VoiceManager.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
src/: InteractionManager.cpp  MultiHandleSliderLogic.cpp  OptionsPanelLayout.cpp  OptionsPanelLayout.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RangeSlider.cpp  RangeSlider.h  SeekBar.cpp  SeekBar.h  StyleTokens.h  SvgShapeManager.cpp  SvgShapeManager.h  SvgWobbleLogic.cpp  SvgWobbleLogic.h  UiManager.cpp  UiManager.h  VideoBackground.h  VideoBackground.mm
tests/: MidiManagerTests.cpp  MultiHandleSliderLogicTests.cpp  OptionsPanelLayoutTests.cpp  RangeSliderLogicTests.cpp  StyleTokensTests.cpp  SvgWobbleLogicTests.cpp  VideoListManagerTests.cpp  VoiceManagerTests.cpp  main.cpp
